width issue on mobile auction

--- a/src/components/AuctionResults/styles.scss
+++ b/src/components/AuctionResults/styles.scss
@@ -11,3 +11,9 @@
     // align-items: baseline;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .auction {
+    width: 100%;
+  }
+}
